<resources>
    <string name="app_name">Tilt maze</string>
    <string name="create_new_terrain">Create new terrain</string>
    <string name="show_statistics">Show statistics</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Radio button TODO</string>
    <string name="pref_description_social_recommendations">Radio button smaller text
    </string>

    <string name="pref_title_display_name">Player name</string>
    <string name="pref_default_display_name">James Bond</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <!--<string-array name="pref_example_list_titles">-->
        <!--<item>Always</item>-->
        <!--<item>When possible</item>-->
        <!--<item>Never</item>-->
    <!--</string-array>-->
    <!--<string-array name="pref_example_list_values">-->
        <!--<item>1</item>-->
        <!--<item>0</item>-->
        <!--<item>-1</item>-->
    <!--</string-array>-->

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <!--<string-array name="pref_sync_frequency_titles">-->
        <!--<item>15 minutes</item>-->
        <!--<item>30 minutes</item>-->
        <!--<item>1 hour</item>-->
        <!--<item>3 hours</item>-->
        <!--<item>6 hours</item>-->
        <!--<item>Never</item>-->
    <!--</string-array>-->
    <!--<string-array name="pref_sync_frequency_values">-->
        <!--<item>15</item>-->
        <!--<item>30</item>-->
        <!--<item>60</item>-->
        <!--<item>180</item>-->
        <!--<item>360</item>-->
        <!--<item>-1</item>-->
    <!--</string-array>-->

    <!--<string-array name="list_preference_entries">-->
        <!--<item>Entry 1</item>-->
        <!--<item>Entry 2</item>-->
        <!--<item>Entry 3</item>-->
    <!--</string-array>-->

    <!--<string-array name="list_preference_entry_values">-->
        <!--<item>1</item>-->
        <!--<item>2</item>-->
        <!--<item>3</item>-->
    <!--</string-array>-->

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="delete_stats_for_selected_polygon">Delete stats for selected polygon</string>
    <string name="delete_all_statistics">Delete all statistics</string>
    <string name="statistics">Statistics</string>
    <string name="traction_summary">Choose traction value (default 0.5)</string>
    <string name="traction_title">Traction (0..1)</string>
    <string name="wall_hit_summary">How much percentage ball loses when hits wall</string>
    <string name="wall_hit_title">Wall hit defect (0..1)</string>
    <string name="choose_polygon">Choose polygon</string>
    <string name="preference_traction_key">TRACTION_KEY</string>
    <string name="preference_collision">BUMP_KEY</string>
    <string name="preference_player_name">PLAYER_NAME</string>
    <string name="main_there_are_no_available_polygons">There are no available polygons</string>
    <string name="stats_for_polygon">Statistics for polygon:</string>
    <string name="Dialog_create_terrain">Would you like to save current polygon?</string>
    <string name="Dialog_create_terrain_title">Saving of the current polygon</string>
    <string name="Dialog_create_terrain_toast">Saving is not possible! Insert all the elements.</string>
    <string name="Dialog_yes">Yes</string>
    <string name="Dialog_no">No</string>
    <string name="MainDialogItemLongClick_Deleted">"Polygon successfully deleted: "</string>
    <string name="MainDialogItemLongClick_message">"Would you like to delete polygon: "</string>
    <string name="MainDialogItemLongClick_Deleted_title">Deleting of the polygon</string>
    <string name="GameNameMessage">Type in your name:</string>
    <string name="GameNameTitle">You have won!</string>
    <string name="Dialog_OK">Ok</string>
    <string name="Dialog_Cancel">Cancel</string>
    <string name="create_terrain_save_dialog_message">Type in name of the polygon:</string>
    <string name="create_terrain_save_dialog_title">Saving of the polygon</string>
    <string name="stats_dialog_delete_all_stats_msg">Would you like to delete ALL statistics?</string>
    <string name="stats_dialog_delete_all_stats_title">Delete ALL statistics</string>
    <string name="stats_dialog_reset_single_msg">Would you like to delete statistic?</string>
    <string name="stats_dialog_reset_single_title">Deleting of one statistic</string>
    <string name="dummy_name">James Bond</string>
    <string name="gravity">gravity_key</string>
    <string name="pref_gen_gravity_summary">Earths force of gravity</string>
    <string name="pref_gen_gravity_title">Gravity</string>
    <string name="game_lost">You lost.</string>
    <string name="game_won">You won!</string>
    <string name="add_wall">Add wall</string>
    <string name="add_hole">Add hole</string>
    <string name="add_start_point">Add start point for ball</string>
    <string name="add_end_point">Add goal</string>
    <string name="undo">Undo</string>
    <string name="save">Save</string>
    <string name="Elements">Elements</string>
</resources>
