<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="General">
        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="textCapWords"
            android:key="PLAYER_NAME"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Advanced">
        <EditTextPreference
            android:defaultValue="3.75"
            android:inputType="numberSigned|numberDecimal"
            android:key="K"
            android:summary="Opis za koeficijent K"
            android:title="K" />

        <EditTextPreference
            android:defaultValue="-9.57"
            android:inputType="numberSigned|numberDecimal"
            android:key="N"
            android:summary="Opis za koeficijent N"
            android:title="N" />

        <EditTextPreference
            android:defaultValue="20"
            android:inputType="numberSigned|numberDecimal"
            android:key="BUMP_KEY"
            android:summary="@string/wall_hit_summary"
            android:title="@string/wall_hit_title" />

        <EditTextPreference
            android:defaultValue="0.5"
            android:inputType="numberDecimal"
            android:key="TRACTION_KEY"
            android:summary="@string/traction_summary"
            android:title="@string/traction_title" />
    </PreferenceCategory>

</PreferenceScreen>
